# machine-learning-uml

./: .gitignore  README.md  justfile  pyproject.toml
homework/1/: hw1.py  latexmk-watcher.config.json
homework/1/src/: main.tex  q1.tex  q2.tex  q3.tex  q4.tex
homework/2/: justfile  latexmk-watcher.config.json
homework/2/latex/: main.tex  q1.tex  q2.tex  q3.tex  q4.tex
homework/2/src/: hw2.py  main.tex
homework/3/: hw3.py  justfile  regression.py
homework/3/latex/: main.tex  q1.tex  q2.tex  q3.tex
homework/3/src/: hw3.py  regression.py
homework/4/: justfile  latexmk-watcher.config.json
homework/4/latex/: hw4.tex  q1.tex  q2.tex  q3.tex
homework/4/origin/: hw4_part2.py
homework/4/src/: part1.py  part2.py
homework/5/: justfile  latexmk-watcher.config.json
homework/5/latex/: hw5.tex  q1.tex  q2.tex
homework/5/src/: hw5.py
homework/6/: justfile  latexmk-watcher.config.json
homework/6/latex/: hw6.tex  q1.tex  q2.tex  q3.tex
homework/6/origin/: hw6.py
homework/6/src/: hw6.py
homework/7/: justfile  latexmk-watcher.config.json
homework/7/latex/: hw7.tex  q1.tex  q2.tex
homework/7/src/: hw7.py  question1.py
homework/8/: justfile  latexmk-watcher.config.json
homework/8/latex/: hw8.tex  q1.tex  q2.tex
homework/8/src/: hw8.py
homework/9/: justfile
lab/: version_check.py
note/: latexmk-watcher.config.json
note/latex/: machine_learning_note.tex
note/latex/def/: math.tex
note/latex/sec/: basic_concept.tex  kernel_methods.tex  linear_models_for_regression.tex  (+2 more)
note/src/: machine_learning_note.tex
src/: main.py
(+4 files in other folders)
